# ApplicationLogger

./: CMakeLists.txt  main.cpp
utils/: utils.cpp  utils.h
